@@ -1,3 +1,10 @@
+2006-12-29  Sam Steingold  <sds@podval.org>
+
+	* backquote.lisp (BACKQUOTE): pass a 2nd argument to MAKE-MACRO
+	* compiler.lisp (compile): ditto
+	* places.lisp ((setf MACRO-FUNCTION)): ditto
+	* trace.lisp (trace1): ditto
+
 2006-12-28  Sam Steingold  <sds@podval.org>
 
 	fixed bug #[ 948868 ]: hashcode[34]_cons weakness
